--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coding Scholarship Form</title>
+    <title>Scholarship Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Coding Scholarship Application</h1>
-        <div id="form-container"></div>
-        <div class="navigation-buttons">
-            <button id="prevBtn" class="nav-button" onclick="prevStep()">Previous</button>
-            <button id="nextBtn" class="nav-button" onclick="nextStep()">Next</button>
-            </div>
-            <script src="index.js"></script>
-        </div>
+
+    <div id="form-container"></div>
+
+    <div class="buttons">
+        <button onclick="previousStep()">Previous</button>
+        <button onclick="nextStep()">Next</button>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
