--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
 
     <div id="form-container"></div>
-
-    <div class="buttons">
-        <button onclick="previousStep()">Previous</button>
+    <h1>Scholarship Application Form</h1>
+    <div class="form-section"></div>
+    <div class="nav-buttons">
+        <button onclick="prevStep()">Previous</button>
         <button onclick="nextStep()">Next</button>
     </div>
 
