--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scholarship Form</title>
+    <title>Scholarship Application Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Scholarship Application Form</h1>
-  
+
     <div id="form-container"></div>
-    <div class="form-section"></div>
+
     <div class="nav-buttons">
-        <button onclick="prevStep()">Previous</button>
-        <button onclick="nextStep()">Next</button>
+        <button id="nextBtn" onclick="nextStep()">Next</button> 
     </div>
 
     <script src="index.js"></script>
