Added basic Css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <title>Scholarship Application Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<div id="cover-page">
+    <h1 class="front-cover">Welcome To Future-Tech </h1>
+    <button onclick="enterSite()">Proceed</button>
+</div>
 
+
+</div>
+
+<body> 
+     <h1>Scholarship Application Form</h1>
     <div id="form-container"></div>
+      
+        <button  class= "button" id="nextBtn" onclick="nextStep()">Next</button> 
+    </div> 
+      
+</div>
 
-    <div class="nav-buttons">
-        <button id="nextBtn" onclick="nextStep()">Next</button> 
-    </div>
+  
 
-    <script src="index.js"></script>
+
+    <script src="index.js">
+  
+
+    </script>
 </body>
 </html>
