added footer and css

--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@ At Future-Tech, we believe innovation thrives on diversity. We are committed to 
     <div id="form-container"></div>
   </div>
 
-  <!-- MOVE THIS OUTSIDE of #main-content -->
+
   <div id="thank-you" style="display:none; text-align:center;">
     <h2 class="thank-you">🎉 Thank You for Your Submission, <span id="userName"></span>!</h2>
     <p>We'll get back to you shortly.</p>
   </div>
+<footer>
+        This scholarship form was coded by <a href="https://github.com/Thivhu"> Thivhulawi Nethengwe</a> and is open sourced on
+        <a href="https://github.com/Thivhu/Coding-Scholarship-form">GitHub</a> and is hosted on
+        <a href="https://scholarshipform.netlify.app/">Netlify</a>.
+    </footer>
 
   <script src="index.js"></script>
 </body>
-x</html>
+</html>
